--- a/fishon/src/CSS/index.css
+++ b/fishon/src/CSS/index.css
@@ -37,9 +37,10 @@ body {
   padding: 0;
 }
 body {
-  background-color: #f1f1f1;
+  background-color: #eee5e5;
   color: #333;
   font-family: 'PT Sans', sans-serif;
+  
 }
 #root {
   width: 100%;
@@ -48,10 +49,17 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #f1f1f1;
-  color: #333;
+ 
+  background-color: #817777;
+  color: #801616;
   font-family: 'PT Sans', sans-serif;
+  
+  
 }
+ .App img {
+   
+   width: 75%;
+ }
 .top-bar {
   width:75%;
   display: flex;
@@ -173,7 +181,7 @@ body {
   flex-direction: row;
   width: 100%;
   height: 47px;
-  background-color: #fff;
+  background-color: #e6dede;
 }
 @media (min-width: 1280px) {
   .tabs {
@@ -233,7 +241,7 @@ body {
   justify-content: space-between;
   align-items: none;
   flex-direction: column;
-  background-color: #fff;
+  background-color: #ebe4e4;
   width: 380px;
   margin-bottom: 16px;
   padding: 24px;
